# recruitment-agent-2.0

./: .env.example  .gitignore  AGENTS.md  AGENTS.zh-CN.md  CLAUDE.md  HANDOFF.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 113702a6d427_add_candidate_tags_source_dedup_and_.py  1ead17436d07_add_jd_fields_headcount_recruit_type_.py  a5b6c7d8e9f0_add_agent_tasks_and_executions.py  c3bb8684592d_add_resumes_table.py  d5bc93d93eb1_add_resumes_table.py  e4c1a2b3d4f5_add_match_scores_table.py  f1f630323ff1_init_tables.py  f8a2c4e91b03_add_candidate_status_flow.py
backend/app/: main.py
backend/app/agent/: base_skill.py  llm_adapter.py  skill_registry.py
backend/app/core/: config.py  database.py  minio.py  redis.py  time.py
backend/app/models/: __init__.py  base.py  (+7 more)
backend/tests/: README.md  conftest.py  factories.py  test_factories.py  test_health.py  test_jd_candidate_matching_skill.py  test_match_api.py  test_match_ranking_api.py  test_match_schemas.py  test_match_score_model.py  test_match_service.py  test_mock_llm.py  test_smoke_jds.py  test_smoke_resumes.py  test_stage5_pr13_execute.py  test_stage5_pr17_orchestrator_routing.py  test_stage5_s5_01_data_layer.py  test_stage5_s5_02_registry_schemas.py  test_stage5_s5_03_event_buffer.py  test_stage5_s5_04_tool_router.py  test_stage5_s5_05_reason_reflect.py  test_stage5_s5_06_plan.py  test_stage5_s5_07_act.py  test_stage5_s5_08_state_machine.py  test_stage5_s5_09_engine.py  test_stage5_s5_10_candidate_merge.py  test_stage5_s5_11_candidate_profile.py
(+185 files in other folders)
