[project]
name = "recruitment-agent-backend"
version = "0.1.0"
description = "Recruitment Agent 2.0 Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.1.0",
    "redis>=5.0.0",
    "minio>=7.2.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.19.0",
    "watchdog>=3.0.0",
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "langgraph>=0.0.50",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "tests"]
